customer-service-k8s-example/K8s-Configs/customer-service-k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: customer-service
  labels: 
    app: customer-service
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: customer-service
  template: 
    metadata: 
      labels: 
        app: customer-service
    spec: 
      containers: 
      - name: customer-service
        image: sm/customer-service:1.0
        imagePullPolicy: Never
        volumeMounts: 
        - name: secret-volume
          mountPath: /etc/secret-volume
          subPath: secret.jks
        ports: 
        - containerPort: 8080
      volumes: 
          - name: secret-volume
            secret: 
                secretName: sm-identity
                items:
                  - key: sm-identity
                    path: secret.jks
                  
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service
  ports:
  - protocol: TCP
    port: 8081
    nodePort: 30004
  type: LoadBalancer
