customer-service-k8s-example/K8s-Configs/customer-service-k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customer-service
spec: 
  rules:
  - host: smcustomer.com
    http:
      paths:
      - path: /customer
        backend:
          serviceName: customer-service
          servicePort: 8081
